--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,13 +2,24 @@
 import "../styles/style.scss";
 import BaseHead from "../components/BaseHead.astro";
 import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+import { SITE_TITLE, SITE_DESCRIPTION } from "../consts";
+const page_title = "成長をともに",
+  description = "ようこそTOPページへ",
+  type = "website";
 ---
 
 <html lang='ja'>
-  <head> </head>
+  <head>
+    <BaseHead title={page_title} description={description} type={type} />
+  </head>
   <body>
-    <h1>My Astro Site</h1>
+    <Header />
+    <main>
+      <section class='mv'>
+        <h1>{page_title}</h1>
+        <p></p>
+      </section>
+    </main>
   </body>
 </html>
 
