--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,17 +1,26 @@
 ---
-import "../styles/style.scss";
 import BaseHead from "../components/BaseHead.astro";
-const title = "about";
+import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
+
+const page_title = "Aboutページです。";
+const description = "AstroというJSフレームワークの勉強しています。";
+const type = "artcle";
 ---
 
 <html lang='ja'>
-  <BaseHead title={title} />
+  <head>
+    <BaseHead title={page_title} description={description} type={type} />
+  </head>
   <body>
-    <h1>{title}</h1>
-    <h2>これはAboutページです。</h2>
-    <p>おはよう</p>
-    <p>こんにちは</p>
-    <p>こんばんわ</p>
+    <Header />
+    <main>
+      <section class='ttl_area'>
+        <h1>{page_title}</h1>
+        <p>ここはaboutページになります。</p>
+      </section>
+    </main>
+    <Footer />
   </body>
 </html>
 
