--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,29 +1,34 @@
 ---
-import Ga1 from "./Ga1.astro";
-import { site_title } from "../consts";
+import Ga1 from './Ga1.astro'
+import { site_title } from '../consts'
 
-const { title, description, type, image = "/common/img/ogp.jpg" } = Astro.props;
+const { title, description, type, image = '/common/img/ogp.jpg' } = Astro.props
 
-const canonicalURL = new URL(Astro.url.pathname, Astro.site);
+const prefix =
+  type == 'website'
+    ? 'og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# website: https://ogp.me/ns/website#'
+    : 'og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# article: https://ogp.me/ns/article#'
 
-const resetStyle = "https://cdn.jsdelivr.net/npm/destyle.css@1.0.15/destyle.css";
+const canonicalURL = new URL(Astro.url.pathname, Astro.site)
 ---
 
-<Ga1 />
-<meta charset='utf-8' />
-<meta name='viewport' content='width=device-width,initial-scale=1' />
-<meta name='format-detection' content='email=no,telephone=no,address=no' />
+<head prefix={prefix}>
+  <Ga1 />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <meta name="format-detection" content="email=no,telephone=no,address=no" />
 
-<title>{title} | {site_title}</title>
-<meta name='description' content={description} />
-<meta property='og:title' content={`${title}｜${site_title}`} />
-<meta property='og:description' content={description} />
-<meta property='og:type' content={type} />
-<meta property='og:url' content={new URL(image, Astro.url)} />
-<meta property='og:site_name' content={site_title} />
+  <title>{title} | {site_title}</title>
+  <meta name="description" content={description} />
+  <meta property="og:title" content={`${title}｜${site_title}`} />
+  <meta property="og:description" content={description} />
+  <meta property="og:type" content={type} />
+  <meta property="og:url" content={new URL(image, Astro.url)} />
+  <meta property="og:site_name" content={site_title} />
 
-<link rel='canonical' href={canonicalURL} />
-<link rel='icon' href='/favicon.svg' />
+  <link rel="canonical" href={canonicalURL} />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon-precomposed" href="/apple-touch-icon.png" />
 
-<link rel='stylesheet' href={resetStyle} />
-
+  <link rel="stylesheet" href="/src/styles/common.scss" />
+</head>
