--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,32 +1,42 @@
 ---
-import BaseHead from "../components/BaseHead.astro";
-import Header from "../components/Header.astro";
-import Footer from "../components/Footer.astro";
+// インポート
+import BaseHead from '../components/BaseHead.astro'
+import BaseLayout from '../layouts/BaseLayout.astro'
+import TopMv from '../components/TopMv.astro'
 
-const page_title = "Astro勉強中";
-const description = "AstroというJSフレームワークの勉強しています。";
-const type = "website";
+// ページ設定
+const page_title = 'Astro勉強中'
+const description = 'AstroというJSフレームワークの勉強しています。'
+const type = 'website'
 ---
 
-<html lang='ja'>
-  <head>
-    <BaseHead title={page_title} description={description} type={type} />
-  </head>
-  <body>
-    <Header />
-    <main>
-      <section class='mv'>
-        <h1>{page_title}</h1>
-        <p></p>
+<html lang="ja">
+  <BaseHead title={page_title} description={description} type={type} />
+  <BaseLayout>
+    <section class="mv">
+      <TopMv />
+      <section class="news">
+        <h2>ニュース一覧</h2>
+        <ul>
+          <li>
+            <a href="/"
+              >ニューステキストニューステキストニューステキストニューステキストニューステキスト</a
+            >
+          </li>
+          <li>
+            <a href="/">ニューステキストニューステキストニューステキスト</a>
+          </li>
+          <li>
+            <a href="/"
+              >ニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキスト</a
+            >
+          </li>
+        </ul>
       </section>
-      <section class='form_area'></section>
-    </main>
-    <Footer />
-    <style>
-      main {
-        padding-top: 60px;
-      }
-    </style>
-  </body>
+      <section class="about">
+        <h2>企業概要</h2>
+      </section>
+    </section>
+    <style lang="scss"></style>
+  </BaseLayout>
 </html>
-
