--- a/src/components/TopMv.astro
+++ b/src/components/TopMv.astro
@@ -1,47 +1,35 @@
 ---
 ---
 
-<div class="mySwiper">
-  <div class="swiper-container">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <img
-          src="https://source.unsplash.com/random/1920x1080/?spring"
-          alt=""
-        />
-      </div>
-      <div class="swiper-slide">
-        <img
-          src="https://source.unsplash.com/random/1920x1080/?summer"
-          alt=""
-        />
-      </div>
-      <div class="swiper-slide">
-        <img
-          src="https://source.unsplash.com/random/1920x1080/?autumn"
-          alt=""
-        />
-      </div>
-      <div class="swiper-slide">
-        <img
-          src="https://source.unsplash.com/random/1920x1080/?winter"
-          alt=""
-        />
-      </div>
+<div class="swiper-container">
+  <div class="swiper-wrapper">
+    <div class="swiper-slide">
+      <img src="https://source.unsplash.com/random/1920x1080/?spring" alt="" />
+    </div>
+    <div class="swiper-slide">
+      <img src="https://source.unsplash.com/random/1920x1080/?summer" alt="" />
+    </div>
+    <div class="swiper-slide">
+      <img src="https://source.unsplash.com/random/1920x1080/?autumn" alt="" />
+    </div>
+    <div class="swiper-slide">
+      <img src="https://source.unsplash.com/random/1920x1080/?winter" alt="" />
     </div>
   </div>
 </div>
 
 <style lang="scss">
-  section.mv {
-    width: 100vw;
-    height: 100vh;
+  .swiper-container {
+    width: 100%;
+    height: 100%;
+
     .swiper-wrapper {
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      width: 100%;
+      height: 100%;
     }
     .swiper-slide {
+      width: 100%;
+      height: 100%;
       img {
         width: 100%;
         height: auto;
