--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,12 +1,22 @@
 ---
 import Header from '../components/Header.astro'
 import Footer from '../components/Footer.astro'
+import Ga2 from '../components/Ga2.astro'
 ---
 
-<Header />
-<main>
-  <slot />
-</main>
-<Footer />
+<body>
+  <Ga2 />
+  <div class="wrapper">
+    <Header />
+    <main>
+      <slot />
+    </main>
+    <Footer />
+  </div>
+</body>
 
-<style></style>
+<style>
+  main {
+    margin-top: 60px;
+  }
+</style>
