--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,28 +15,36 @@ const type = 'website'
   <BaseLayout>
     <section class="mv">
       <TopMv />
-      <section class="news">
-        <h2>ニュース一覧</h2>
-        <ul>
-          <li>
-            <a href="/"
-              >ニューステキストニューステキストニューステキストニューステキストニューステキスト</a
-            >
-          </li>
-          <li>
-            <a href="/">ニューステキストニューステキストニューステキスト</a>
-          </li>
-          <li>
-            <a href="/"
-              >ニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキスト</a
-            >
-          </li>
-        </ul>
-      </section>
-      <section class="about">
-        <h2>企業概要</h2>
-      </section>
     </section>
-    <style lang="scss"></style>
+    <section class="news">
+      <h2>ニュース一覧</h2>
+      <ul>
+        <li>
+          <a href="/"
+            >ニューステキストニューステキストニューステキストニューステキストニューステキスト</a
+          >
+        </li>
+        <li>
+          <a href="/">ニューステキストニューステキストニューステキスト</a>
+        </li>
+        <li>
+          <a href="/"
+            >ニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキストニューステキスト</a
+          >
+        </li>
+      </ul>
+    </section>
+    <section class="about">
+      <h2>企業概要</h2>
+    </section>
   </BaseLayout>
+  <style lang="scss">
+    section.mv {
+      width: 100vw;
+      height: calc(100dvh - 60px);
+      overflow: hidden;
+    }
+  </style>
+
+
 </html>
