--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,11 +1,12 @@
 // フォントインポート
 // Noto Serif JP
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@300;600&display=swap');
 
 // カラーパレット
 $color_dark: #333 !default;
 $color_light: #fafafa !default;
+$color_main: #46acca !default;
 
 // 背景色
 $backgroundColor_base: $color_light !default;
@@ -14,8 +15,9 @@ $backgroundColor_base: $color_light !default;
 $fontColor_base: $color_dark !default;
 
 // フォントファミリー
-$fontFamily_sansSerif: "Noto Sans JP", "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif !default;
-$fontFamily_mincho: "Noto Serif JP", serif !default;
+$fontFamily_sansSerif: 'Noto Sans JP', 'Helvetica Neue', Arial,
+  'Hiragino Kaku Gothic ProN', 'Hiragino Sans', Meiryo, sans-serif !default;
+$fontFamily_mincho: 'Noto Serif JP', serif !default;
 $fontFamily_monospace: Consolas, Menlo, Courier, monospace !default;
 
 // フォントサイズ
@@ -32,4 +34,3 @@ $lineHeight_large: 1.75 !default;
 $lineHeight_xlarge: 2 !default;
 
 $lineHeight_default: $lineHeight_middle !default;
-
