パッケージ追加、styleファルダー更新

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,7 +1,7 @@
 ---
 import Ga1 from './Ga1.astro'
 import { site_title } from '../consts'
-import '../styles/common.scss'
+import '../styles/global.scss'
 
 const { title, description, type, image = '/common/img/ogp.jpg' } = Astro.props
 
