--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 // インポート
 import BaseHead from '../components/BaseHead.astro'
-import BaseLayout from '../layouts/BaseLayout.astro'
+import TopLayout from '../layouts/TopLayout.astro'
 import TopMv from '../components/top/TopMv.astro'
 import TopNews from '../components/top/TopNews.astro'
 
@@ -13,14 +13,12 @@ const type = 'website'
 
 <html lang="ja">
   <BaseHead title={page_title} description={description} type={type} />
-  <BaseLayout>
+
+  <TopLayout>
     <TopMv />
     <TopNews />
     <section class="about">
       <h2>企業概要</h2>
     </section>
-  </BaseLayout>
-  <style lang="scss"></style>
-
-
+  </TopLayout>
 </html>
